[package]
name = "graph_cell_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.0"

# For Phase 2, we've added memmap2 for memory-mapped file I/O
# GUI and Python dependencies will be added in later phases:
# These will be added in later phases:
# egui = "0.29"
# eframe = "0.29"
# pyo3 = { version = "0.22", features = ["auto-initialize"] }
# memmap2 = "0.9"
# hex = "0.4"
# serde-pickle = "1.1"
