[package]
name = "graph_cell_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
memmap2 = "0.9"
egui = "0.29"
eframe = "0.29"
pyo3 = { version = "0.22", features = ["auto-initialize"] }

[dev-dependencies]
tempfile = "3.0"

# Phase 4: Added pyo3 for Python execution
# Future phases may add:
# hex = "0.4"
# serde-pickle = "1.1"
