[package]
name = "graph_cell_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
memmap2 = "0.9"
egui = "0.29"
eframe = "0.29"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
pulldown-cmark = "0.9"
arboard = "3.4"
regex = "1.10"
evalexpr = "11"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.4"
assert_matches = "1.5"
pretty_assertions = "1.4"

[[example]]
name = "simple_workflow"
path = "examples/simple_workflow.rs"

# Phase 4: Added pyo3 for Python execution
# Future phases may add:
# hex = "0.4"
# serde-pickle = "1.1"
[[bin]]
name = "graph_cell_editor"
path = "src/main.rs"
default-run = true
